<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>human_pose_detector</name>
  <version>0.1.0</version>
  <description>Um pacote ROS 2 que detecta a pose humana em 3D usando uma câmera RealSense e MediaPipe.</description>
  <maintainer email="pedroalg06@gmail.com">Pedro</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
